SERVER-40792 Create error details if doesn't already exist when handling WouldChangeOwningShard error